<resources>
    <string name="paese">Paese</string>
    <string name="nome_paese">Nome paese</string>

    <string name="button_ricarica_pagina">BACK</string>
    <string name="button_salva_database">Save Data SQLite</string>
    <string name="button_salva_grafico">Save Image.png</string>
    <string name="select_country">SELECT COUNTRY</string>
    <string name="select_topics">SELECT TOPIC</string>
    <string name="load_previus_image">LOAD PREVIUS IMAGE</string>
    <string name="load_data_offline">LOAD DATA OFFLINE</string>

    <string name="dialog_contacts1">GROUP: FPR-IOL2018</string>
    <string name="dialog_contacts2">Mobile Programming</string>
    <string name="dialog_contacts3">Degree course of Computer Engineering </string>

    <string name="title_activity_lista_paese_activity">Select Country</string>
    <string name="title_activity_lista_argomenti">Select Topic</string>
    <string name="title_activity_lista_indicatori">Select Indicator</string>
    <string name="title_activity_grafico">Ceck Graph</string>
    <string name="title_activity_carica_dati">Load Data</string>
    <string name="title_activity_mostra_png_precedentemente_salvata">Load Image</string>
    <string name="title_activity_notification">Page Not Found</string>
    <string name="title_activity_visualizza_dati">Show Data</string>

    <string name="Menu_1">www.worldbank.org</string>
    <string name="Menu_2">About us</string>
    <string name="Menu_3">Contacts</string>


    <string name="titolo_argomenti">value argomento</string>
    <string name="note_argomenti">sourceNote argomento</string>
    <string name="nome_indicatore">nome indicatore</string>
    <string name="text_view_colonna">text view colonna</string>
    <string name="text_view_valore">text view valore</string>

    <string name="alessio">Alessio Rufini\n</string>
    <string name="tel_alessio">329 8736xxx</string>
    <string name="email_alessio">alessio.rufini@inwind.it</string>
    <string name="daniele">Daniele Ferraro</string>
    <string name="tel_daniele">339 7926xxx</string>
    <string name="email_daniele">f.daniele81@tiscali.it</string>
    <string name="geremia">Geremia Petricca</string>
    <string name="tel_geremia">320 5641xxx</string>
    <string name="email_geremia">geremia7777@gmail.com</string>

    <string name="titolo_grafico">titolo grafico</string>
    <string name="sottotitolo_chart">sottotitolo chart</string>

    <string name="image_world_bank">image world bank</string>
    <string name="image_png">image.png</string>
    <string name="image_view_dati">image view dati</string>
    <string name="image_delete">image delete</string>
    <string name="image_person">person</string>
    <string name="image_phone">image phone</string>
    <string name="image_mail">image mail</string>

    <string name="about_wb">About...App World Bank</string>
    <string name="about_wb_guide">Guide App</string>
    <string name="aboutinfo0">->Questa App è stata sviluppata secondo le richieste fornite dal Prof. Regoli nel Progetto
    World Bank</string>
    <string name="aboutinfo1">->Il nostro gruppo "FPR-IOL2018 è costituito da 3 studenti del corso di Ing. Informatica online</string>
    <string name="aboutinfo2">->Composizione del gruppo Rufini Alessio, Ferraro Daniele, Geremia Petricca (Menu -> "CONTACTS")</string>
    <string name="aboutinfoGuida0">SELECT COUNTRY -> Permette di selezionare un Paese da una lista,
    da qui possiamo visualizzare fino a 21 Argomenti e successicamente gli indicatori relativi all\'argomento selezionato. Infine viene visualizzato un grafico.</string>
    <string name="aboutinfoGuida1">SELECT TOPICS -> Permette di selezionare un Argomento da una lista,
    da qui possiamo visualizzare gli indicatori relativi all\'argomento e successicamente il paese di nostro interesse. Infine viene visualizzato un grafico.</string>
    <string name="aboutinfoGuida2">LOAD PREVIUS IMAGE -> Permette di visualizzare il grafico salvato
    nell\'ultima ricerca eseguita</string>
    <string name="aboutinfoGuida3">LOAD DATA OFFLINE -> Permette di visualizzare la lista dei database che abbiamo salvato in precedenza e anche di cancellarli</string>
    <string name="universita">TOR VERGATA UNIVERSITY</string>

    <string name="APP_NAME">WorldBank</string>
    <string name="CHOOSE_BROWSER">Complete the action with one of the following browser: </string>
    <string name="WORLDBANK_SITE">http://www.worldbank.org</string>

    <string name="IO_ERROR">Unable to contact:</string>
    <string name="MSG_ERRORE_CONNESSIONE">: Errore connessione internet</string>
    <string name="STRING_NOT_FOUND">String not found</string>
    <string name="BUILDER_OK">Builder Ok</string>
    <string name="ONCLICK_OK">OnClick Ok</string>



    <string name="API_TOPIC_LIST_FORMAT_JSON">https://api.worldbank.org/v2/topic?format=json</string>
    <string name="API_COUNTRY_LIST">https://api.worldbank.org/v2/country/</string>
    <string name="API_TOPIC_LIST">https://api.worldbank.org/v2/topic/</string>
    <string name="API_COUNTRY_LIST_FORMAT_JSON_PER_PAGE_500">
        https://api.worldbank.org/v2/country?format=json&amp;per_page=500</string>

    <string name="NOME_CLASSE_SELEZIONATA">nome_classe_selezionata</string>
    <string name="NOME_PAESE_SELEZIONATO">nome_paese_selezionato</string>
    <string name="NOME_INDICATORE_SELEZIONATO">nome_indicatore_selezionato</string>

    <string name="ID_PAESE_SELEZIONATO">idPaeseSelezionato</string>
    <string name="ID_ARGOMENTO_SELEZIONATO">idArgomentoSelezionato</string>
    <string name="ID_INDICATORE_SELEZIONATO">idIndicatoreSelezionato</string>
    <string name="ID_RECORD_TABELLA">idRecordTabella</string>

    <string name="FINISH">finish</string>
    <string name="DELETE">delete</string>

    <string name="NOME_CHIAVE_FILE_JSON">nome_chiave_file_json</string>
    <string name="KEY_JSON_FILE_COUNTRY">json_file_country</string>
    <string name="KEY_JSON_FILE_ARGOMENTI">json_file_argomenti</string>
    <string name="KEY_JSON_FILE_INDICATORI_PER_ARGOMENTO">json_file_indicatori_per_argomento</string>
    <string name="KEY_JSON_FILE_INDICATORE_PER_PAESE">json_file_indicatore_per_paese</string>
    <string name="KEY_RECORD_ID">id_record_visualizza_dati</string>
    <string name="KEY_ARGUMENTS_DIALOG">key_arguments_dialog</string>
    <string name="KEY_ITEM_MENU_SELEZIONATO">key_item_menu_selezionato</string>
    <string name="KEY_ID_ICONA">key_id_icona</string>
    <string name="KEY_ID_LAYOUT">key_id_layout</string>
    <string name="KEY_DIALOG_TYPE">key_dialog_type</string>
    <string name="KEY_IS_NO_GRAPH_DIALOG">key_is_no_graph_dialog</string>


    <string name="PREFERENCES_FILE_PAESI">Preferences_Paesi</string>
    <string name="PREFERENCES_FILE_ARGOMENTI">Preferences_Argomenti</string>
    <string name="PREFERENCES_FILE_INDICATORI_PER_ARGOMENTO">
        Preferences_Indicatori_per_argomento</string>
    <string name="PREFERENCES_FILE_INDICATORE_PER_PAESE">Preferences_Indicatore_per_Paese</string>
    <string name="PREFERENCES_FILE_VISUALIZZA_DATI">Preferences_Visualizza_Dati</string>

    <string name="LANCIATA_DA_PRECEDENTE">lanciata_da_precedente</string>
    <string name="ATTIVITÀ_LANCIATA">attività_lanciata</string>
    <string name="MY_DIALOG">my_dialog</string>
    <string name="ritorno_home">Back Home</string>

    <string-array name="stringhe_dialog_check_now">
         <item name="title_dialog_check_now">Saving completed!</item>
         <item name="message_dialog_check_now">Do you want to check now?</item>
         <item name="positive_button_dialog_check_now">YES</item>
         <item name="negative_button_dialog_check_now">NO</item>
    </string-array>


    <string-array name="stringhe_dialog_data_missing">
        <item name="title_dialog_data_missing">No data available!</item>
        <item name=
            "message_dialog_data_missing">Remember that you have the option to save the data at the
            end of the search</item>
        <item name="positive_button_dialog_data_missing">OK</item>
    </string-array>


    <string-array name="stringhe_dialog_image_missing">
        <item name="title_dialog_warning_data">No image available!</item>
        <item name=
            "message_dialog__image_missing">Remember that you have the option to save the image at the
            end of the search</item>
        <item name="positive_button_dialog_image_missing">OK</item>
    </string-array>

    <string-array name="stringhe_dialog_no_graph">
        <item name="title_dialog_no_graph">No data available!</item>
        <item name=
            "message_dialog__no_graph">Want to try again?</item>
        <item name="positive_button_dialog_no_graph">YES</item>
        <item name="negative_button_dialog_no_graph">NO</item>
    </string-array>


    <string-array name="stringhe_dialog_about_us">
        <item name="title_dialog_about_us">ABOUT US...</item>
        <item name="positive_button_dialog_about_us">OK</item>
    </string-array>


    <string-array name="stringhe_dialog_contacts">
        <item name="title_dialog_contacts">Contacts</item>
        <item name="positive_button_dialog_contacts">OK</item>
    </string-array>



    <string-array name="nomi_colonne_visualizza_dati">
        <item>Download Time</item>
        <item>Record Id</item>
        <item>Country Id</item>
        <item>Indicator Id</item>
        <item>Country Name</item>
        <item>Indicator Name</item>
        <item>Source Id</item>
        <item>Last Udate</item>
        <item>DATE</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>



</resources>