<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_contacts"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview_contacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/linearlayout_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                style="@style/styleContactsCourse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start|center"
                android:background="@drawable/border"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/dialog_contacts1" />

            <TextView
                android:id="@+id/textView11"
                style="@style/styleContactsCourse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start|center"
                android:background="@drawable/border"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/dialog_contacts3"/>

            <TextView
                android:id="@+id/textView12"
                style="@style/styleContactsCourse"
                android:layout_gravity="start|center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/universita"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView13"
                style="@style/styleContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/person"
                android:text="@string/alessio" />

            <TextView
                android:id="@+id/textView14"
                style="@style/styleContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/call"
                android:text="@string/tel_alessio" />

            <TextView
                android:id="@+id/textView15"
                style="@style/styleContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/email"
                android:text="@string/email_alessio" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView16"
                style="@style/styleContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/person"
                android:text="@string/daniele" />

            <TextView
                android:id="@+id/textView17"
                style="@style/styleContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/call"
                android:text="@string/tel_daniele" />

            <TextView
                android:id="@+id/textView18"
                style="@style/styleContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/email"
                android:text="@string/email_daniele" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView19"
                style="@style/styleContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/person"
                android:text="@string/geremia" />

            <TextView
                android:id="@+id/textView20"
                style="@style/styleContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/call"
                android:text="@string/tel_geremia" />

            <TextView
                android:id="@+id/textView21"
                style="@style/styleContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/email"
                android:text="@string/email_geremia" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />


        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>